Improve ResolvedSourceInfo safety
Prefixes and names are not plain strings, but type-captured
Unqualified's.

JIRA: YANGTOOLS-1112
Change-Id: I202cfccac4f3d5284195bd0ff4ae3ad2e9871954
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>